# trending-topics-airflow-etl

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  _generate_mock_data.py  _take_screenshots.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml
dags/: trending_topics_pipeline.py
dashboard/: app.py
dashboard/assets/: style.css
data/gold/: daily_overall_sentiment.parquet  daily_trending_topics.parquet
src/: aggregate.py  clean.py  deduplication.py  extract.py  nlp_processing.py  sentiment_analysis.py  trend_detection.py
tests/: test_aggregate.py  test_clean.py  test_dag_validation.py  test_deduplication.py  test_extract.py  test_nlp_processing.py  test_sentiment_analysis.py  test_trend_detection.py
