[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "trending-topics-airflow"
version = "1.0.0"
description = "Pipeline ETL de tópicos emergentes com Airflow, NLP e dashboard Dash"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "apache-airflow==2.10.5",
    "feedparser==6.0.11",
    "pandas==2.2.2",
    "pyarrow==16.1.0",
    "nltk==3.8.1",
    "scikit-learn==1.5.0",
    "pysentimiento==0.7.3",
    "torch==2.3.1",
    "dash==2.17.0",
    "plotly==5.22.0",
    "wordcloud==1.9.3",
    "matplotlib==3.9.0",
    "pyyaml==6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "ruff==0.5.0",
    "pre-commit==3.7.1",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
